// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="sonarcloud page page-limited"
  >
    <header
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.create_project.header
      </h1>
    </header>
    <DeferredSpinner
      timeout={100}
    />
  </div>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="sonarcloud page page-limited"
  >
    <header
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.create_project.header
      </h1>
    </header>
    <Tabs
      onChange={[Function]}
      selected="auto"
      tabs={
        Array [
          Object {
            "key": "auto",
            "node": <React.Fragment>
              onboarding.create_project.select_repositories
              <span
                className="beta-badge spacer-left"
              >
                beta
              </span>
            </React.Fragment>,
          },
          Object {
            "key": "manual",
            "node": "onboarding.create_project.create_manually",
          },
        ]
      }
    />
    <AutoProjectCreate
      identityProvider={
        Object {
          "backgroundColor": "blue",
          "iconPath": "icon/path",
          "key": "github",
          "name": "GitHub",
        }
      }
      onProjectCreate={[Function]}
    />
  </div>
</Fragment>
`;

exports[`should render with Manual creation only 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="sonarcloud page page-limited"
  >
    <header
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.create_project.header
      </h1>
    </header>
    <Connect(ManualProjectCreate)
      currentUser={
        Object {
          "externalProvider": "microsoft",
          "groups": Array [],
          "isLoggedIn": true,
          "login": "foo",
          "name": "Foo",
          "scmAccounts": Array [],
        }
      }
      onProjectCreate={[Function]}
    />
  </div>
</Fragment>
`;

exports[`should switch tabs 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.create_project.header"
    titleTemplate="%s"
  />
  <div
    className="sonarcloud page page-limited"
  >
    <header
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.create_project.header
      </h1>
    </header>
    <Tabs
      onChange={[Function]}
      selected="auto"
      tabs={
        Array [
          Object {
            "key": "auto",
            "node": <React.Fragment>
              onboarding.create_project.select_repositories
              <span
                className="beta-badge spacer-left"
              >
                beta
              </span>
            </React.Fragment>,
          },
          Object {
            "key": "manual",
            "node": "onboarding.create_project.create_manually",
          },
        ]
      }
    />
    <AutoProjectCreate
      identityProvider={
        Object {
          "backgroundColor": "blue",
          "iconPath": "icon/path",
          "key": "github",
          "name": "GitHub",
        }
      }
      onProjectCreate={[Function]}
    />
  </div>
</Fragment>
`;
